tests/baselines/reference/internalAliasInterface.errors.txt
internalAliasInterface.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasInterface.ts (1 errors) ====
    module a {
        export interface I {
        }
    }
    
    module c {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.I;
        export var x: b;
    }
    